// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComplianceEmptyState expect to render different message if many policies exist 1`] = `
<Bullseye>
  <EmptyState>
    <EmptyStateIcon
      icon={[Function]}
      size="xl"
      style={
        Object {
          "color": "var(--pf-global--primary-color--100)",
          "fontWeight": "500",
        }
      }
      title="Compliance"
    />
    <Title
      headingLevel="h1"
      size="lg"
    >
      No policies
    </Title>
    <br />
    <EmptyStateBody>
      <TextContent>
        <a
          href="insights/compliance/scappolicies"
        >
          2
           
          policies
        </a>
         
        have
         been created but 
        have
         no reports.
      </TextContent>
      <TextContent>
        The Compliance service uses SCAP policies to track your organization's adherence to compliance requirements.
      </TextContent>
      <TextContent>
        Get started by adding a policy, or read documentation about how to connect OpenSCAP to the Compliance service.
      </TextContent>
    </EmptyStateBody>
    <EmptyStatePrimary>
      <Button
        component="a"
        href="/insights/compliance/scappolicies"
        variant="primary"
      >
        Create new policy
      </Button>
    </EmptyStatePrimary>
    <EmptyStateSecondaryActions>
      <Button
        component="a"
        href="https://access.redhat.com/documentation/en-us/red_hat_insights/2020-04/html/assessing_and_monitoring_security_policy_compliance_of_rhel_systems/index"
        rel="noopener noreferrer"
        target="_blank"
        variant="link"
      >
        Learn about OpenSCAP and Compliance
      </Button>
    </EmptyStateSecondaryActions>
  </EmptyState>
</Bullseye>
`;

exports[`ComplianceEmptyState expect to render different message if one policy exists 1`] = `
<Bullseye>
  <EmptyState>
    <EmptyStateIcon
      icon={[Function]}
      size="xl"
      style={
        Object {
          "color": "var(--pf-global--primary-color--100)",
          "fontWeight": "500",
        }
      }
      title="Compliance"
    />
    <Title
      headingLevel="h1"
      size="lg"
    >
      No policies
    </Title>
    <br />
    <EmptyStateBody>
      <TextContent>
        <a
          href="insights/compliance/scappolicies"
        >
          1
           
          policy
        </a>
         
        has
         been created but 
        has
         no reports.
      </TextContent>
      <TextContent>
        The Compliance service uses SCAP policies to track your organization's adherence to compliance requirements.
      </TextContent>
      <TextContent>
        Get started by adding a policy, or read documentation about how to connect OpenSCAP to the Compliance service.
      </TextContent>
    </EmptyStateBody>
    <EmptyStatePrimary>
      <Button
        component="a"
        href="/insights/compliance/scappolicies"
        variant="primary"
      >
        Create new policy
      </Button>
    </EmptyStatePrimary>
    <EmptyStateSecondaryActions>
      <Button
        component="a"
        href="https://access.redhat.com/documentation/en-us/red_hat_insights/2020-04/html/assessing_and_monitoring_security_policy_compliance_of_rhel_systems/index"
        rel="noopener noreferrer"
        target="_blank"
        variant="link"
      >
        Learn about OpenSCAP and Compliance
      </Button>
    </EmptyStateSecondaryActions>
  </EmptyState>
</Bullseye>
`;

exports[`ComplianceEmptyState expect to render without error if no policies exist 1`] = `
<Bullseye>
  <EmptyState>
    <EmptyStateIcon
      icon={[Function]}
      size="xl"
      style={
        Object {
          "color": "var(--pf-global--primary-color--100)",
          "fontWeight": "500",
        }
      }
      title="Compliance"
    />
    <Title
      headingLevel="h1"
      size="lg"
    >
      No policies
    </Title>
    <br />
    <EmptyStateBody>
      <TextContent>
        The Compliance service uses SCAP policies to track your organization's adherence to compliance requirements.
      </TextContent>
      <TextContent>
        Get started by adding a policy, or read documentation about how to connect OpenSCAP to the Compliance service.
      </TextContent>
    </EmptyStateBody>
    <EmptyStatePrimary>
      <Button
        component="a"
        href="/insights/compliance/scappolicies"
        variant="primary"
      >
        Create new policy
      </Button>
    </EmptyStatePrimary>
    <EmptyStateSecondaryActions>
      <Button
        component="a"
        href="https://access.redhat.com/documentation/en-us/red_hat_insights/2020-04/html/assessing_and_monitoring_security_policy_compliance_of_rhel_systems/index"
        rel="noopener noreferrer"
        target="_blank"
        variant="link"
      >
        Learn about OpenSCAP and Compliance
      </Button>
    </EmptyStateSecondaryActions>
  </EmptyState>
</Bullseye>
`;
